--- a/CoinFlow/Chart/Chart.storyboard
+++ b/CoinFlow/Chart/Chart.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="MGN-xU-0Qo">
-    <device id="retina6_0" orientation="portrait" appearance="dark"/>
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,29 +17,99 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h9s-Oz-oAX">
-                                <rect key="frame" x="184" y="404" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="ButtonTapped:" destination="oM1-XL-8YR" eventType="touchUpInside" id="KAb-Bd-Grj"/>
-                                </connections>
-                            </button>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nJg-fP-ePu">
+                                <rect key="frame" x="0.0" y="88" width="390" height="722"/>
+                                <subviews>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="LMo-pv-fXq">
+                                        <rect key="frame" x="0.0" y="0.0" width="390" height="200"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="200" id="dop-yc-TMI"/>
+                                        </constraints>
+                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="15" minimumInteritemSpacing="10" id="Pen-iW-F35">
+                                            <size key="itemSize" width="350" height="200"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ChartCardCell" id="Yyp-wf-cgl" customClass="ChartCardCell" customModule="CoinFlow" customModuleProvider="target">
+                                                <rect key="frame" x="20" y="6.666666666666667" width="389" height="187"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="hef-Jo-2oc">
+                                                    <rect key="frame" x="0.0" y="0.0" width="389" height="187"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </collectionViewCellContentView>
+                                                <size key="customSize" width="389" height="187"/>
+                                            </collectionViewCell>
+                                        </cells>
+                                        <connections>
+                                            <outlet property="dataSource" destination="oM1-XL-8YR" id="7Ki-P6-fiw"/>
+                                            <outlet property="delegate" destination="oM1-XL-8YR" id="LhQ-3B-nts"/>
+                                        </connections>
+                                    </collectionView>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aoO-Oc-48j">
+                                        <rect key="frame" x="0.0" y="220" width="390" height="1500"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1500" id="6Oa-nD-Viq"/>
+                                        </constraints>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChartListCell" id="KRJ-6m-HiM" customClass="ChartListCell" customModule="CoinFlow" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="28" width="390" height="60"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KRJ-6m-HiM" id="EYv-bT-7gi">
+                                                    <rect key="frame" x="0.0" y="0.0" width="390" height="60"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
+                                        <sections/>
+                                        <connections>
+                                            <outlet property="dataSource" destination="oM1-XL-8YR" id="zet-Pz-muY"/>
+                                            <outlet property="delegate" destination="oM1-XL-8YR" id="MPT-Vf-Chl"/>
+                                        </connections>
+                                    </tableView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="LMo-pv-fXq" secondAttribute="trailing" id="2Rc-2i-9e0"/>
+                                    <constraint firstAttribute="bottom" secondItem="aoO-Oc-48j" secondAttribute="bottom" id="ST9-ba-AJ9"/>
+                                    <constraint firstAttribute="trailing" secondItem="aoO-Oc-48j" secondAttribute="trailing" id="WrT-KA-jYF"/>
+                                    <constraint firstItem="aoO-Oc-48j" firstAttribute="leading" secondItem="nJg-fP-ePu" secondAttribute="leading" id="exP-K4-enG"/>
+                                    <constraint firstItem="aoO-Oc-48j" firstAttribute="top" secondItem="LMo-pv-fXq" secondAttribute="bottom" constant="20" id="fXB-gq-ht5"/>
+                                    <constraint firstItem="LMo-pv-fXq" firstAttribute="leading" secondItem="nJg-fP-ePu" secondAttribute="leading" id="xgY-ww-Ibx"/>
+                                    <constraint firstItem="LMo-pv-fXq" firstAttribute="top" secondItem="nJg-fP-ePu" secondAttribute="top" id="zSQ-4C-692"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="bXl-Jc-5PD"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="nJg-fP-ePu" firstAttribute="top" secondItem="bXl-Jc-5PD" secondAttribute="top" id="25n-xa-yed"/>
+                            <constraint firstItem="bXl-Jc-5PD" firstAttribute="bottom" secondItem="nJg-fP-ePu" secondAttribute="bottom" id="7aV-wz-Vp4"/>
+                            <constraint firstItem="LMo-pv-fXq" firstAttribute="width" secondItem="la8-Dr-X2e" secondAttribute="width" id="IF9-mo-TFB"/>
+                            <constraint firstItem="bXl-Jc-5PD" firstAttribute="trailing" secondItem="nJg-fP-ePu" secondAttribute="trailing" id="RKa-Yv-PvX"/>
+                            <constraint firstItem="nJg-fP-ePu" firstAttribute="leading" secondItem="bXl-Jc-5PD" secondAttribute="leading" id="SJJ-cP-zjm"/>
+                            <constraint firstItem="nJg-fP-ePu" firstAttribute="width" secondItem="la8-Dr-X2e" secondAttribute="width" id="dwi-XB-LAl"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="n2I-xR-LBA"/>
                     <navigationItem key="navigationItem" title="Chart" id="Hcj-88-9ak"/>
+                    <size key="freeformSize" width="390" height="844"/>
+                    <connections>
+                        <outlet property="chartCollectionView" destination="LMo-pv-fXq" id="6Qn-Dg-NDw"/>
+                        <outlet property="chartTableView" destination="aoO-Oc-48j" id="AQS-Rb-4e1"/>
+                        <outlet property="chartTableViewHeight" destination="6Oa-nD-Viq" id="h6W-uz-lEh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7mP-fX-RRX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3213" y="1724"/>
+            <point key="canvasLocation" x="-3215" y="1376"/>
         </scene>
         <!--Chart Detail View Controller-->
         <scene sceneID="XJE-t0-KPx">
             <objects>
-                <viewController storyboardIdentifier="ChartDetailViewController" id="nub-JL-kAn" customClass="ChartDetailViewController" customModule="CoinFlow" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ChartDetailViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="nub-JL-kAn" customClass="ChartDetailViewController" customModule="CoinFlow" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="xb8-Qu-8JS">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -58,7 +129,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oZy-dh-AD5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2357" y="1724"/>
+            <point key="canvasLocation" x="-2369" y="1376"/>
         </scene>
         <!--Chart-->
         <scene sceneID="jSA-8b-oiQ">
@@ -74,8 +145,16 @@
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fvj-gx-zmG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="3Tg-38-dDl">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                    <autoresizingMask key="autoresizingMask"/>
+                    <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3Tg-38-dDl" id="jIs-xx-Zur">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </tableViewCellContentView>
+                </tableViewCell>
             </objects>
-            <point key="canvasLocation" x="-3213" y="995"/>
+            <point key="canvasLocation" x="-3214" y="614"/>
         </scene>
     </scenes>
     <resources>
