--- a/CoinFlow/News/News.storyboard
+++ b/CoinFlow/News/News.storyboard
@@ -32,8 +32,34 @@
                     <view key="view" contentMode="scaleToFill" id="VXK-1J-VXX">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kce-eL-OuX">
+                                <rect key="frame" x="0.0" y="88" width="390" height="722"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewsListCell" id="abn-M3-vSh" customClass="NewsListCell">
+                                        <rect key="frame" x="0.0" y="28" width="390" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="abn-M3-vSh" id="ycP-x0-Hnc">
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="a7h-VM-Vei" id="iJx-ck-1Cd"/>
+                                    <outlet property="delegate" destination="a7h-VM-Vei" id="iVJ-Q3-UFG"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="C1K-wH-17H"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="C1K-wH-17H" firstAttribute="bottom" secondItem="kce-eL-OuX" secondAttribute="bottom" id="HQC-6P-S82"/>
+                            <constraint firstItem="kce-eL-OuX" firstAttribute="top" secondItem="C1K-wH-17H" secondAttribute="top" id="KL6-YO-dVo"/>
+                            <constraint firstItem="kce-eL-OuX" firstAttribute="leading" secondItem="C1K-wH-17H" secondAttribute="leading" id="cVU-Qz-vF1"/>
+                            <constraint firstItem="C1K-wH-17H" firstAttribute="trailing" secondItem="kce-eL-OuX" secondAttribute="trailing" id="vqG-Zg-v7W"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="Tpd-ie-2RV"/>
                     <navigationItem key="navigationItem" title="News" id="2XR-tR-8Nz"/>
